# ProjectAquarium

./: .gitignore  README.md  Tasks.md  project_env.sh  tasks.md  tasks_stack.md
.obsidian/: appearance.json  community-plugins.json  hotkeys.json  workspace.json
binder/: requirements.txt
code/: pyproject.toml
code/binder/: requirements.txt
code/sciosense/: pico_scan.c  pico_scan_v2  pico_scan_v2.c
code/sciosense/extracted_headers/: !AdminUISequence  !AdvtExecuteSequence  !Binary  !Component  !ControlEvent  !CustomAction  !Error  !EventMapping  !FeatureComponents  !InstallExecuteSequence  !MsiFileHash  !NIDependency  !NIPathsMSKBDetected  !NIPathsPermissions  !NIPathsRegLocator  !NIPathsRequested  !NIPathsVersionNumeric  !NIProductPart  !NIPropertyProduct  !NISummaryProduct  !NIUpgradeProduct  !Property  !RadioButton  !TextStyle  !UIText  !Upgrade  !_StringData  !_Tables  !_Validation  Binary.WixUI_Bmp_Banner  Binary.WixUI_Bmp_Dialog
design/: design_parts.yaml  existing_parts.yaml  macros.lyx  model.py
docs/: macros.lyx  two-papers-SML.lyx  wave_dynamics_theory.lyx
notes/: Vibrations.lyx  dispersion-Hansen.bbl  dispersion-Hansen.blg  dispersion-Hansen.tex  dispersion.py  dispersion_for_optics.ipynb  dispersion_plots.ipynb  linear_swave_theory.ipynb  macros.lyx  macros.tex  motor-system.lyx  references.bib  ripple_theory.lyx  seismic_measurements_protocol.md  snell's_law_for_refraction.lyx  spectrum_plots.ipynb  status_report_0311_anodization.lyx  task-flowchart.ipynb  tasks_infrared.md  wave-height-system.lyx  wave_dynamics_theory.lyx  weights of stuff.txt  (+2 more)
(+107 files in other folders)
