[project]
name = "ProjectAquarium"
requires-python = ">=3.12"  # <--- Add this line
version = "0.1.0"
dependencies = [
    "cmake>=4.2.1",
    "coolprop>=7.2.0",
    "gsw>=3.6.20",
    "marimo[lsp,recommended]>=0.18.4",
    "matplotlib>=3.10.8",
    "notebook>=7.5.1",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "pyside6>=6.10.1",
    "pyyaml>=6.0.3",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "sympy>=1.14.0",
]
