[project]
name = "ProjectAquarium"
requires-python = ">=3.14"
version = "0.1.0"
dependencies = [
    "cmake>=4.2.1",
    "coolprop>=7.2.0",
    "gsw>=3.6.20",
    "h5py>=3.16.0",
    "hid>=1.0.9",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "marimo[lsp,recommended]>=0.18.4",
    "matplotlib>=3.10.8",
    "micropython-rp2-stubs>=1.27.0.post1",
    "mpremote>=1.27.0",
    "notebook>=7.5.1",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "pyside6>=6.10.1",
    "pyusb>=1.3.1",
    "pyyaml>=6.0.3",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "sympy>=1.14.0",
]

[tool.uv]
environments = [
    "sys_platform == 'linux'"
]
